--- a/Web_app/HomePage/index.html
+++ b/Web_app/HomePage/index.html
@@ -28,12 +28,11 @@
       <div class="container-fluid justify-content-center">
         <div class="navbar-nav">
             <h1 class="display-2 text-light">Comic cave!</h1>
-
         </div>
       </div>
     </nav>
 
-    <div class="container-fluid" id="content">
+    <div class="container-fluid row" id="content">
       <h1 class="text-light row justify-content-center">Publishers We carry</h1>
       <div id="publisher" class="row scroll-wrapper" >
         <img src="publisher_img/marv.png" class=" col-4" alt="Cinque Terre">
@@ -52,9 +51,9 @@
           </p>
         </div>
 
-        <div class="row List_comics">
-          <div class="container-fluid">
-              <nav class="container">
+        <div class="row List_comics justify-content-center">
+          <div class="container-fluid col">
+              <nav class="container-fluid">
                 <ul class="nav nav-tabs nav-fill">
                   <li class="nav-item active"><a data-toggle="tab" href="#home">Upcoming</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#menu1">Previous</a></li>
@@ -64,8 +63,8 @@
                 <div class="tab-content">
                   <div class="tab-pane fade show active" id="home">
                     <h3>This Week Releases</h3>
-                    <table id="table_comic">
-                      <thead class="u-full-width">
+                    <table id="table_comic" class="container-fluid table-responsive">
+                      <thead class="container">
                           <tr>
                             <th>Publisher</th>
                             <th>Title</th>
@@ -113,31 +112,33 @@
         </div>
 
       </div>
-
-
-      <footer class="container-fluid padding">
-        <div class="row justify-content-center">
-          <div class="contant_us container col-6">
-            <h5>Contact US</h5>
-            <ul>
-              <li><a href="#">comicCave@gmail.com</a></li>
-            </ul>
-
-          </div>
-          <div class="col-6 payment">
-            <h5>Accepted payments</h5>
-            <ul id="list_of_payment">
-              <li class="	fa fa-cc-amex"></li>
-              <li class="	fa fa-cc-visa"></li>
-              <li class="	fa fa-cc-discover"></li>
-              <li class="	fa fa-cc-mastercard	"></li>
-            </ul>
-          </div>
-
-        </div>
-      </footer>
-
     </div>
-<script src="index.js"></script>
+
+    <div class="container-fluid page-footer">
+        <footer class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="contant_us col-6">
+              <h5>Contact US</h5>
+              <ul>
+                <li><a href="#">comicCave@gmail.com</a></li>
+              </ul>
+
+            </div>
+            <div class="col-6 payment">
+              <h5>Accepted payments</h5>
+              <ul id="list_of_payment">
+                <li class="	fa fa-cc-amex"></li>
+                <li class="	fa fa-cc-visa"></li>
+                <li class="	fa fa-cc-discover"></li>
+                <li class="	fa fa-cc-mastercard	"></li>
+              </ul>
+            </div>
+
+          </div>
+        </footer>
+      </div>
+
+
+    <script src="index.js"></script>
 
   </body>
