--- a/Web_app/admin.html
+++ b/Web_app/admin.html
@@ -204,7 +204,7 @@
           </div>
           <div class="form-group">
             <label for="image_upload">Image</label>
-            <input type="file" class="form-control-file" name="image" value="">
+            <input type="file" class="form-control-file" name="image"/>
           </div>
           <div class="form-group">
             <label for="artist_selecter">Artist</label>
