attempt 1001 with now image not required

--- a/Web_app/admin.html
+++ b/Web_app/admin.html
@@ -198,7 +198,7 @@
       </div>
       <div class="modal-body">
       <!-- comic name, image(upload). artist, writer, Publisher, price, quantity, description, released, recommended -->
-      <form id="comicForm" name="comic" method="post">
+      <form enctype="multipart/form-data" id="comicForm" name="comic" method="post">
           <div class="form-group">
             <label for="comic_name">Comic Name:</label><input class="form-control" type="text" name="comic_name" value="">
           </div>
