--- a/Web_app/admin.html
+++ b/Web_app/admin.html
@@ -227,9 +227,7 @@
           </div>
           <div class="form-group">
             <label for="Price">Price</label>
-            <input type="text" class="form-control text-left" id="currency" name="price"
-            data-inputmask="'alias': 'numeric',
-            'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'prefix': '$ ', 'placeholder': '0'">
+            <input type="number" class="form-control text-left" name="price">
           </div>
           <div class="form-group">
             <label for="quanity">Quantity</label>
